@@ -74,7 +74,7 @@ ABSOLUTE_MOD_BUILD_DIR := $(word 1,$(_ABSOLUTE_DIRS))
 ABSOLUTE_CLASS_DIR := $(word 2,$(_ABSOLUTE_DIRS))
 
 FINAL_CLASSPATH = $(call JBE_CANONICALIZE, -classpath \
-	$(FINAL_SOURCE_DIR) $(MOD_CLASS_DIR) $(MOD_CLASSPATH) $(LOCAL_CLASSPATH))
+	$(FINAL_SOURCE_DIR) $(MOD_CLASS_DIR) $(MOD_CLASSPATH) $(PROJ_CLASSPATH))
 	
 FINAL_CLASSPATH_OPTION = -classpath "$(FINAL_CLASSPATH)"
 	
@@ -242,7 +242,7 @@ endif
 	$(call NOTE, Generating Javadoc ...)
 	@$(MKDIRS) $(JAVADOC_DIR)
 	$(JAVADOC) -d $(JAVADOC_DIR) -sourcepath $(FINAL_SOURCE_DIR) \
-	-classpath "$(call JBE_CANONICALIZE,-classpath $(MOD_CLASSPATH) $(LOCAL_CLASSPATH) $(MOD_CLASS_DIR))" \
+	-classpath "$(call JBE_CANONICALIZE,-classpath $(MOD_CLASSPATH) $(PROJ_CLASSPATH) $(MOD_CLASS_DIR))" \
 	$(JAVADOC_OPT) $(PACKAGES)
 
 	
